2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: There is no curl bridge anymore, don't try to package it.

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: remove ff36 bridge.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Put lunar-launcher in the xpi/crx.

2010-04-08  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (novell-moonlight.crx): use chrome to pack/sign the
	extension instead of python+openssl.

2010-03-29  Chris Toshok  <toshok@ximian.com>

	* moonlight.js: pass the -moontitle to the window in its args as
	well.

	* application.js: set the window title

2010-03-29  Chris Toshok  <toshok@ximian.com>

	* moonlight.xul: we don't need to use any html here, as xul has
	its own <iframe>.  wrap the iframe in a vbox because otherwise we
	don't seem to get a background.

	* application.js (ApplicationStartup): since we're passing an
	nsIArray, we can access nsIURI/width/height via array indices.
	Also use .spec instead of .path when dealing with the array, or
	else firefox will resolve it relative to the chrome:// scheme and
	fail to find it.

	* moonlight.js (openWindow): create an nsIArray (well, an
	nsIMutableArray) to pass the args (uri, width, height) to the
	window.

2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	* application.js: Turns out the arg[0] is a nsIURI, so get that
	and then extract the path to set on the iframe as the source.

2010-03-25  Jeffrey Stedfast  <fejj@novell.com>

	* moonlight.xul: Take the command-line argument and set it as the
	source of the iframe.

	* moonlight.js: New js script to provide command-line argument
	handling in firefox.

2010-03-24  Jeffrey Stedfast  <fejj@novell.com>

	* Makefile.am: Updated to include the chrome:// content in the xpi
	and crx installers.

	* chrome.manifest: Added content and locale entries for OOB.

	* moonlight.xul: OutOfBrowser xul window.

2010-03-23  Jeffrey Stedfast  <fejj@novell.com>
